# spaniej

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
spaniej/: __init__.py
