[tool.poetry]
name = "spaniej"
version = "0.1.0"
description = ""
authors = ["krokosik <wikkra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
panel = "^1.5.3"
hvplot = "^0.11.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
watchfiles = "^0.24.0"
ipykernel = "^6.29.5"
jupyter-bokeh = "^4.0.5"
pygments = "^2.18.0"
pyparsing = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
